--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@ new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-NDKPGD9');</script>
+	<script>
+      window.dataLayer = window.dataLayer ||[];
+window.dataLayer.push({
+  'event': 'signup',
+  'signupMethod' : 'email' 
+});
+      </script>
 <!-- End Google Tag Manager -->
 	
     <!-- Required meta tags -->
