--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@ new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-NDKPGD9');</script>
+	<!--
+  Note: In the following code sample, make sure to
+  replace "TAG_ID" with your tag ID.
+  Learn more: https://support.google.com/tagmanager/answer/12326985
+-->
 	<!DOCTYPE html>
 <html lang="en">
 <head>
