--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   replace "TAG_ID" with your tag ID.
   Learn more: https://support.google.com/tagmanager/answer/12326985
 -->
-	<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <!-- Google tag (gtag.js) -->
@@ -23,7 +23,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
-        gtag('config', 'GTM-NDKPGD9');
+        gtag('config', 'TAG_ID');
     </script>
 </head>
 <body>
