--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
-        gtag('config', 'TAG_ID');
+        gtag('config', 'GTM-NDKPGD9');
     </script>
 </head>
 <body>
