--- a/index.html
+++ b/index.html
@@ -130,6 +130,19 @@ dataLayer.push({
   }
 });
     </script>
+	<script>
+window.dataLayer = window.dataLayer || [];
+window.dataLayer.push(
+{
+  event : 'view_item',
+        ecommerce:
+        {
+            item_name:"Web Analytics",
+            item_id:"Course_001",
+            item_cat:"Online Courses",
+}
+});
+</script>
 </body>
 </html>
 	<script>
@@ -139,6 +152,7 @@ window.dataLayer.push({
   'signupMethod' : 'email' 
 });
       </script>
+	
 	
     <!-- Required meta tags -->
     <meta charset="utf-8">
