--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- End Google Tag Manager -->
 	<script src="https://www.googleoptimize.com/optimize.js?id=OPT-WDP6X3X"></script>
 	<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y4HVLSFED4"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ETB53PXKT7"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-Y4HVLSFED4');
+  gtag('config', 'G-ETB53PXKT7');
 </script>
  
   Note: In the following code sample, make sure to
